--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "jarsepay",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jarsepay/Jarsekai.git"
+    "url": "git+https://github.com/KyotakaMD45/Daemo.-.git"
   },
   "bugs": {
-    "url": "https://github.com/jarsepay/Jarsekai/issues"
+    "url": "https://github.com/KyotakaMD45/Daemo./issues"
   },
   "license": "MIT",
   "dependencies": {
